--- a/static/scss/pages/_about.scss
+++ b/static/scss/pages/_about.scss
@@ -762,16 +762,18 @@
 
 .crazy-about-sect{
     margin-top: 1em;
-    height: 102em;
+    // height: 102em;
+    height: auto;
+    padding-bottom: 2em;
     background: white;
     z-index: 5;
     position: relative;
-    @media #{$breakpoint-sm}{
-       height: 140em;
-    }
+    // @media #{$breakpoint-sm}{
+    //    height: 140em;
+    // }
     @media #{$breakpoint-min-md}{
         margin: 1em 0 0 0;
-        height: 36em;
+        padding-bottom: 4em;
     }
     
 }
