--- a/static/scss/base/_typography.scss
+++ b/static/scss/base/_typography.scss
@@ -207,8 +207,8 @@ $font-la-parisienne: 'la-parisienne', serif;
   font-weight: 400;
 }
 
-.quote-text-dark{
-  color: $base-text-color;
+.quote-text-white{
+  color: white;
   text-transform: uppercase;
   font-weight: 400;
   letter-spacing: .3em;
