--- a/static/scss/pages/_home.scss
+++ b/static/scss/pages/_home.scss
@@ -170,7 +170,8 @@
     grid-template-rows: repeat(2, auto); 
     grid-template-columns: 68vw;
     margin-top: 3em;
-    height: 165em;
+    padding-bottom: 3em;
+    height: 153em;
     text-align: center;
     justify-content: center;
     position: relative;
