--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8823,13 +8823,17 @@ input[type='checkbox'] {
   }
 }
 
-@media only screen and (min-width: 768px) and (max-width: 991px) {
+@media only screen and (min-width: 768px) {
   .testimonial-intro-text {
     margin-bottom: 0;
   }
 }
 
-@media only screen and (min-width: 768px) and (max-width: 991px) {
+.testimonials-section {
+  margin: 3em 0;
+}
+
+@media only screen and (min-width: 768px) {
   .testimonials-section {
     margin: 2em 0;
   }
@@ -9085,10 +9089,10 @@ input[type='checkbox'] {
 @media only screen and (min-width: 768px) {
   .gain-item {
     position: relative;
-    -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
-    width: 30% !important;
+    -ms-flex-item-align: end;
+        -ms-grid-row-align: end;
+        align-self: end;
+    width: 31% !important;
     padding: 0 .5em;
   }
   .gain-item:nth-of-type(1):after, .gain-item:nth-of-type(2):after, .gain-item:nth-of-type(4):after, .gain-item:nth-of-type(5):after {
@@ -9096,7 +9100,7 @@ input[type='checkbox'] {
     background-color: #f58c7c;
     position: absolute;
     width: 2px;
-    height: 80%;
+    height: 3em;
     margin: auto;
     top: 0;
     bottom: 0;
@@ -9126,6 +9130,10 @@ input[type='checkbox'] {
     height: 100%;
     width: 95%;
   }
+}
+
+.not-alone {
+  background-color: #f0f3f3;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 1200px) {
